--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dash = "^2.9.3"
 openai = "^0.27.7"
 pandas = "^2.0.1"
 pymupdf = "^1.22.3"
+dash-bootstrap-components = "^1.4.1"
 
 
 [build-system]
