--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pandas = "^2.0.1"
 pymupdf = "^1.22.3"
 dash-bootstrap-components = "^1.4.1"
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
